修复单例模式错误

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": ">=7.1.0",
     "topthink/framework": "5.0.*",
-    "jinyicheng/think_status": "1.0",
+    "jinyicheng/thinkphp_status": "1.0",
     "ext-json": "*"
   },
   "autoload": {
