--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
     {
       "name": "jinyicheng",
       "email": "234067496@qq.com"
+    },
+    {
+      "name": "guojun",
+      "email": "492282937@qq.com"
     }
   ],
   "require": {
