--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "php": ">=7.1.0",
     "topthink/framework": "5.0.*",
     "jinyicheng/thinkphp_status": "1.0",
+    "aliyuncs/oss-sdk-php": "^2.3",
     "ext-json": "*"
   },
   "autoload": {
